2005-07-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Makefile.am: Install NavWebPage.py plugin
	* src/data/Makefile.am: Install stylesheets for NavWebPage
	
2005-07-15  Don Allingham  <don@gramps-project.org>
	* src/Reportutils.py: copy source information while sanitizing data
	* src/plugins/NavWebPage.py: add source references instead of direct
	links to sources

2005-07-15  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/NavWebPage.py: Use researcher info from Gramps
	session, not from the database.
	* src/data/main4.css: Typos.

2005-07-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Avoid some segfaults; HTML validation fixes;
	Show all names of a person; Show all images of person/source and
	place; Add plugin version to header; Optimize page titles
	* src/Utils.py (find_mime_type_pixbuf): Dont segfault with note only object
	* src/SelectObject.py (on_select_row): Dont segfault with note only object
	* src/GenericFilter.py: Only load rules that provide the required
	number of arguments.

2005-07-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: gallery/media object enhancements, div/span fixes
	in HTML, source and place references, individual source pges.

2005-07-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Added display_note_object and
	display_first_image_as_thumbnail to BasePage; PlacePage and
	IndividualPage use this now.
	Display URL list of Individuals and Places

2005-07-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: wrap content with div, fix encoding problems

2005-07-13  Don Allingham  <don@gramps-project.org>
	* src/Sort.py: don't use upper case, let locale.strcoll figure this
	out (correctly) for us
	* src/plugins/NavWebPage.py: fix sorting.
	* src/data/main*.css: added stylesheets for web page generator
	* src/data/Makefile.am: add stylesheets
	
2005-07-13  Alex Roitman  <shura@gramps-project.org>