@@ -97,6 +97,9 @@ A:active {
 	text-decoration: none;
 }
 
+SUP {
+    line-height: 0;
+}
 /* Custom {{{1
  */
 
