@@ -96,6 +96,9 @@ A:active {
 	text-decoration: none;
 }
 
+SUP {
+    line-height: 0;
+}
 /* Custom {{{1
  */
 
